cabal-version:       3.0

name:                intcode
version:             0.4.0.0
synopsis:            Advent of Code 2019 intcode interpreter
category:            Compilers/Interpreters
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2019 Eric Mertens
build-type:          Simple
homepage:            https://github.com/glguy/intcode
bug-reports:         https://github.com/glguy/intcode/issues
tested-with:         GHC ==9.2.8, GHC ==9.4.7, GHC ==9.6.3

description:
  Implementation of the Intcode virtual machine as defined by
  Advent of Code <https://adventofcode.com/2019>.
  .
  This implementation provides an efficient, pure implementation
  of the interpreter and exposes multiple levels of abstraction
  to make it easy to use in a variety of situations.

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:              git
  location:          https://github.com/glguy/intcode

library
  hs-source-dirs:    src
  default-language:  Haskell2010

  exposed-modules:
    Intcode
    Intcode.Machine
    Intcode.Opcode
    Intcode.Parse
    Intcode.Step

  build-depends:
    base         >= 4.12 && < 4.20,
    containers   ^>= {0.6, 0.7},
    primitive    ^>= {0.8, 0.9},

test-suite doctests
  type:              exitcode-stdio-1.0
  main-is:           doctests.hs
  default-language:  Haskell2010
  ghc-options:       -threaded
  build-depends:
    base,
    containers,
    primitive,
    doctest ^>= 0.22,
