cabal-version:       3.0

name:                intcode
version:             0.4.0.0
synopsis:            Advent of Code 2019 intcode interpreter
category:            Compilers/Interpreters
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2019 Eric Mertens
build-type:          Simple
homepage:            https://github.com/glguy/intcode
bug-reports:         https://github.com/glguy/intcode/issues
Tested-With:         GHC == {9.6.6, 9.8.2, 9.10.1}

description:
  Implementation of the Intcode virtual machine as defined by
  Advent of Code <https://adventofcode.com/2019>.
  .
  This implementation provides an efficient, pure implementation
  of the interpreter and exposes multiple levels of abstraction
  to make it easy to use in a variety of situations.

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:              git
  location:          https://github.com/glguy/intcode

library
  hs-source-dirs:    src
  default-language:  Haskell2010

  exposed-modules:
    Intcode
    Intcode.Machine
    Intcode.Opcode
    Intcode.Parse
    Intcode.Step

  build-depends:
    base         >= 4.12 && < 4.22,
    containers   ^>= {0.6, 0.7},
    primitive    ^>= {0.8, 0.9},

test-suite doctests
  type:              exitcode-stdio-1.0
  main-is:           doctests.hs
  default-language:  Haskell2010
  ghc-options:       -threaded
  build-depends:
    base >= 4.12 && < 4.22,
    containers,
    primitive,
    doctest ^>= 0.23,
